# PyAudioEditor

./: .gitignore  AGENTS.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
src/: __init__.py
src/core/: __init__.py  audio_engine.py  clip.py  config.py  effects.py  effects_basic.py  effects_vocal.py  playback.py  project.py  separation.py  track.py  types.py  undo_manager.py
src/ui/: __init__.py  main_window.py  time_ruler.py  track_widget.py  waveform_view.py
src/utils/: __init__.py  logger.py
tests/: __init__.py  conftest.py  test_effects_basic.py  test_project.py  test_track.py  test_undo_manager.py
