[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyaudioeditor"
version = "2.0.0"
description = "Professional audio editor with AI-powered vocal separation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "PyAudioEditor Team"}
]
keywords = ["audio", "editor", "daw", "music", "effects", "vocal-separation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Editors",
]

dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "sounddevice>=0.4.6",
    "PyQt6>=6.4.0",
    "pyqtdarktheme>=2.1.0; python_version<'3.12'",
    "pyqtdarktheme>=0.1.7; python_version>='3.12'",
    "qtawesome>=1.2.0",
]

[project.optional-dependencies]
ai = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "demucs>=4.0.0",
]
spleeter = [
    "spleeter>=2.3.0",
]
pitch = [
    "pyrubberband>=0.3.0",
]
formant = [
    "praat-parselmouth>=0.4.3",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-qt>=4.2.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
all = [
    "pyaudioeditor[ai,spleeter,pitch,formant,dev]",
]

[project.scripts]
pyaudioeditor = "main:main"

[project.urls]
Repository = "https://github.com/LuizAugustoFH-77/PyAudioEditor"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function calls in default arguments
]

[tool.ruff.isort]
known-first-party = ["src"]
